--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ main {
     padding: 15px;
 }
 
+.descr-dte {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 h2 {
     font-size: 2.5rem;
     font-weight: bold;
@@ -126,7 +132,6 @@ footer {
     padding: 30px;
 
 }
-
 
 footer ul {
     display: flex;
